deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-clone-deploy
  labels:
    app: flipkart-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flipkart-clone
  template:
    metadata:
      labels:
        app: flipkart-clone
    spec:
      containers:
      - name: flipkart-clone
        image: atultele/flipkart-clone
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: flipart-clone-service
spec:
  selector:
    app: flipkart-clone
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
