service.yml
apiVersion: v1
kind: Service
metadata:
  name: flipart-clone-service
  namespace: flipkart
spec:
  type: NodePort
  selector:
    app: flipkart-clone
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 3000
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30015
